--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -618,6 +618,7 @@ input#send-to-input {
 
 }
 
+.bbpress #bbpress-forums .medium-editor-toolbar,
 .buddypress #buddypress.buddypress-wrap .medium-editor-toolbar {
 
 	.medium-editor-toolbar-actions {
