#711 - Fixed alignment of toolbar buttons and added tooltip

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -612,7 +612,7 @@ input#send-to-input {
 	}
 
 	#whats-new-messages-toolbar {
-		padding: 0 15px 0 0;
+		padding: 5px 15px 0 0;
 		width: 100%;
 	}
 
