#813 - Fixed content format resetting issue.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -140,6 +140,7 @@
 
 				&.medium-editor-button-active {
 					color: #122b46 !important;
+					background: none transparent !important;
 				}
 
 				&.medium-editor-action-close {
@@ -207,6 +208,7 @@
 
 					&.medium-editor-button-active {
 						color: #122b46 !important;
+						background: none transparent !important;
 					}
 
 					&.medium-editor-action-close {
