--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -461,6 +461,7 @@ span.icons:before {
 
 				&.medium-editor-button-active {
 					color: #122b46 !important;
+					background: none transparent !important;
 				}
 
 				&.medium-editor-action-close {
