--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -595,6 +595,7 @@ input#send-to-input {
 
 				&.medium-editor-button-active {
 					color: #122b46 !important;
+					background: none transparent !important;
 				}
 
 				&.medium-editor-action-close {
