#685 - Fixed create meeting ui issues

--- a/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
+++ b/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
@@ -96,6 +96,8 @@
 		flex: auto;
 		border-bottom: 1px solid #e7e9ec;
 		padding: 15px 0;
+		background-color: #fff;
+		margin-top: -1px;
 
 		&:empty {
 			display: none;
