--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -12455,6 +12455,8 @@ span.icons:before {
   flex: auto;
   border-bottom: 1px solid #e7e9ec;
   padding: 15px 0;
+  background-color: #fff;
+  margin-top: -1px;
 }
 
 .meeting-item-table .recording-list:empty {
