#685 - styled recording list

--- a/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
+++ b/src/bp-integrations/zoom/assets/css/bp-group-zoom-meeting.scss
@@ -98,6 +98,29 @@
 		padding: 15px 0;
 		background-color: #fff;
 		margin-top: -1px;
+		flex-flow: column;
+
+		.recording-list-row-wrap {
+			display: table;
+			table-layout: fixed;
+			width: 100%;
+		}
+
+		.recording-list-row {
+			display: table-row;
+			width: 100%;
+		}
+
+		.recording-list-row-col {
+			display: table-cell;
+			text-align: center;
+			border-bottom: 1px solid #e7e9ec;
+			padding: 10px 0;
+
+			h4 {
+				margin-bottom: 0;
+			}
+		}
 
 		&:empty {
 			display: none;
