#685 - Fixed recording list ui also removed delete options

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -12478,7 +12478,7 @@ span.icons:before {
   padding: 10px 0;
 }
 
-.meeting-item-table .recording-list .recording-list-row-col h4 {
+.meeting-item-table .recording-list .recording-list-row-col p {
   margin-bottom: 0;
 }
 
