--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -358,6 +358,10 @@
 				content: "\f335";
 			}
 
+			.buddyboss_edit_activity_comment:before {
+				display: none;
+			}
+
 			.button {
 				border: 0;
 				box-shadow: none;
@@ -373,6 +377,31 @@
 			}
 
 		} // close .activity-meta
+
+		.comment-item .activity-meta.action {
+
+			.buddyboss_edit_activity_cancel:before {
+				display: none;
+			}
+
+			.buddyboss_edit_activity_cancel,
+			.buddyboss_edit_activity_comment,
+			.buddyboss_edit_activity_comment.action-save {
+				background: #fff;
+				border-color: #ccc;
+				border-style: solid;
+				border-width: 1px;
+				color: #555;
+				cursor: pointer;
+				font-size: 12px;
+				font-weight: 400;
+				outline: none;
+				line-height: 1.3;
+				text-align: center;
+				text-decoration: none;
+			}
+
+		} //close .comment-item
 
 	} // close .activity-item
 
