--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1892,6 +1892,10 @@ input.search-query-input {
   content: "\f335";
 }
 
+.activity-list .activity-item .bp-generic-meta.action .buddyboss_edit_activity_comment:before {
+  display: none;
+}
+
 .activity-list .activity-item .bp-generic-meta.action .button {
   border: 0;
   box-shadow: none;
@@ -1904,6 +1908,27 @@ input.search-query-input {
 
 .activity-list .activity-item .bp-generic-meta.action .unfav .like-count {
   color: #0061ac;
+}
+
+.activity-list .activity-item .comment-item .activity-meta.action .buddyboss_edit_activity_cancel:before {
+  display: none;
+}
+
+.activity-list .activity-item .comment-item .activity-meta.action .buddyboss_edit_activity_cancel,
+.activity-list .activity-item .comment-item .activity-meta.action .buddyboss_edit_activity_comment,
+.activity-list .activity-item .comment-item .activity-meta.action .buddyboss_edit_activity_comment.action-save {
+  background: #fff;
+  border-color: #ccc;
+  border-style: solid;
+  border-width: 1px;
+  color: #555;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 400;
+  outline: none;
+  line-height: 1.3;
+  text-align: center;
+  text-decoration: none;
 }
 
 @media screen and (min-width: 46.8em) {
