#266 - Fixed icon color issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2071,6 +2071,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		margin-bottom: 0;
 		position: relative;
 		display: inline-block;
+		vertical-align: middle;
 
 		input[type="text"] {
 			background: transparent;
