--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2192,7 +2192,7 @@ input.search-query-input {
 .ac-reply-toolbar .bb-icon,
 #whats-new-toolbar .bb-icon,
 #whats-new-messages-toolbar .bb-icon {
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(18, 43, 70, 0.4);
   transition: all linear 0.2s;
   font-size: 24px;
   width: auto;
@@ -13289,6 +13289,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   margin-bottom: 0;
   position: relative;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .bp-media-header-wrap .media-search-form input[type="text"] {
