--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12941,10 +12941,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 @media screen and (min-width: 768px) {
   .bb-document-theater .bb-media-section {
-    padding-right: 40px;
-  }
-  .bb-document-theater .bb-media-section h3 {
-    right: 40px;
+    border-right: 1px solid #ecedee;
   }
 }
 
