#266 - document page search form ui issue fixed

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2099,6 +2099,14 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 	.media-search-form {
 		float: right;
+
+		.bp-dir-search-form {
+			border: 0;
+
+			#group-document-search {
+				background-image: none;
+			}
+		}
 	}
 
 }
