#266 - Replaced dashicons to bb icon on message screen

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -210,6 +210,10 @@
 
 			.message_action__anchor {
 				color: #555;
+
+				.bb-icon-menu-dots-v {
+					font-size: 20px;
+				}
 			}
 
 			.message_action__list {
