--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2024,7 +2024,7 @@ input.search-query-input {
 .activity-url-thumb-nav {
   background: rgba(0, 0, 0, 0.3);
   position: absolute;
-  bottom: 20px;
+  top: 0;
   right: 0;
   left: 0;
   margin: auto;
@@ -2098,6 +2098,7 @@ input.search-query-input {
   left: 5px;
   top: 5px;
   text-decoration: none;
+  z-index: 10;
 }
 
 #activity-close-link-suggestion:focus,
